# phase-3

./: Dockerfile
backend/: .gitignore  Dockerfile  clean_db.py  db_audit.py  docker-compose.yml  fix_agent_system.py  fix_system.py  init_db.py  main.py  pyproject.toml  replace_system_func.py  requirements.txt  run_migration.py  test_db_connection.py  update_system_instructions.py
backend/migrations/: 003_add_conversations_messages.sql
backend/src/: auth.py  database.py  models.py  tasks.py
backend/src/api/: chatkit.py  conversations.py  messages.py
backend/src/mcp_client/: __init__.py  client.py
backend/src/models/: __init__.py  conversation.py  message.py  task.py  user.py
backend/src/services/: __init__.py  agent_service.py  agent_service_backup.py  agent_service_new.py  agent_service_partial.py  conversation_service.py  message_service.py  new_system.txt  task_service.py
backend/src/utils/: __init__.py  input_sanitization.py
frontend/: next.config.js  package.json  pnpm-lock.yaml
frontend/src/app/dashboard/: page.tsx
frontend/src/app/dashboard/archive/: page.tsx
frontend/src/app/dashboard/chat/: page.tsx
frontend/src/app/dashboard/schedule/: page.tsx
frontend/src/app/dashboard/tasks/: page.tsx
frontend/src/components/chat/: ChatInterface.tsx
frontend/src/components/widgets/: BacklogSidebar.tsx
frontend/src/lib/: api.ts  auth.ts
frontend/src/services/: conversation.ts
history/prompts/ai-agent/: backlog-sidebar.md  chatkit-import-fix.md  chatkit-integration.md
